@@ -120,6 +120,8 @@ DECLARE_BUILTIN_FUNCTION(PermanentFunction)
 DECLARE_BUILTIN_FUNCTION(AdjointFunction)
 DECLARE_BUILTIN_FUNCTION(CofactorFunction)
 DECLARE_BUILTIN_FUNCTION(InverseFunction)
+DECLARE_BUILTIN_FUNCTION(MagnitudeFunction)
+DECLARE_BUILTIN_FUNCTION(HadamardFunction)
 
 DECLARE_BUILTIN_FUNCTION_R(FactorialFunction)
 DECLARE_BUILTIN_FUNCTION_R(DoubleFactorialFunction)
